# ninoseki.github.io

./: .gitignore  .travis.yml  404.html  Gemfile  README.md  _config.yml  about.md  feed.atom  feed.json  index.html  index.md  keybase.txt  package-lock.json  package.json  posts.md  pyproject.toml  rss.xml  tsconfig.json
.github/workflows/: deploy.yml  test.yml  vuepress-build.yml  vuepress-deploy.yml
.vitepress/: config.ts
.well-known/: keybase.txt
_data/: navigation.yml  ui-text.yml
_includes/: footer.html  toc.html
_includes/head/: custom.html
_layouts/: post.html  single.html
_pages/: about.md
_posts/: 2016-07-21-how-to-send-ems.md
_posts/2016/: 2016-05-25-i-am-happy-with-jekyll.md  2016-06-18-iij-mio-familyshareplan.md  2016-06-18-test.md  2016-12-11-2016-my-best-albums.md
_posts/2017/: 2017-02-25-feb-retrospective.md  2017-04-03-mar-retrospective0.md  2017-04-13-ISC2-seminar-memo.md  2017-05-04-nike-shoes.md  2017-05-06-funabashi-bbs.md  2017-08-23-DEFCON25-memo.md  2017-09-03-trip-to-taiwan.md  2017-10-28-cryptojacking.md  2017-11-13-cryptojacking-in-japan.md  2017-11-18-how-to-use-jekyll-theme.md  2017-11-19-how-to-use-quad9.md  2017-12-01-cyptojacking-in-japan.md  2017-12-09-my-favorite-discs-2017.md  2017-12-10-my-favorite-discs.md  2017-12-31-34c3.md  (+1 more)
_site/: 404.html  feed.xml  index.html  sitemap.xml
about/: index.html
assets/: main.css
chrome-webstore/: privacy_policy.md
docs/: README.md  about.md  index.md  posts.md
post/: index.html
posts/: index.html
privacy_policy/: privacy_policy.md
projects/: mitaka.md
(+157 files in other folders)
