[project]
name = "ninoseki-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiometer>=0.5.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "starlette>=0.46.1",
    "typer>=0.15.2",
    "vt-py>=0.19.0",
]

[dependency-groups]
dev = ["ruff>=0.11.0"]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "RET", # flake8-return
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "W",   # pycodestyle warnings
]
